Fix paste info layout on small screens.

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -66,3 +66,9 @@ td.linenos {
     padding-right: 10px;
 }
 
+.paste-info {
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
